# rcsoccersim3d

./: .gitignore  CMakeLists.txt  Dockerfile  README-zh.md  README.md  rcss3dinit.sh  run.sh
.github/workflows/: build.yml
